--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -38,7 +38,7 @@ footer {
 }
 
 .footer-section a {
-    color: #61dafb; /* Color de los enlaces */
+    color: #ef629d; /* Color de los enlaces */
     text-decoration: none; /* Sin subrayado */
 }
 
