--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,18 +1,17 @@
 /* General */
 html, body {
-    height: 100%; /* Ocupa la altura total */
+    height: 100%;
     margin: 0;
 }
 
 #root {
     display: flex;
     flex-direction: column;
-    width: 100%; /* Ahora ocupa todo el ancho */
+    width: 100%;
 }
 
 main {
     padding: 20px;
-    
 }
 
 /* Footer */
@@ -20,23 +19,24 @@ footer {
     background-color: #282c34; /* Fondo oscuro */
     color: white;
     text-align: center;
-    width: 100%; /* Asegura que el footer ocupe todo el ancho */
-    margin-top: auto; /* Empuja el footer al final */
+    width: 100%;
+    margin-top: auto;
+    padding: 20px 0;
 }
 
 .footer-content {
     display: flex;
-    justify-content: space-between; /* Espacio entre secciones */
+    justify-content: space-between;
     align-items: flex-start;
-    flex-wrap: wrap; /* Ajusta en pantallas pequeñas */
-    padding: 0 20px; /* Espaciado lateral */
-    max-width: 1200px; /* Ajusta este valor según lo desees */
-    margin: 0 auto; /* Centra el contenido */
+    flex-wrap: wrap;
+    padding: 0 20px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .footer-section {
     flex: 1;
-    margin: 10px; /* Espacio entre secciones */
+    margin: 10px;
 }
 
 .footer-section h2 {
@@ -46,18 +46,45 @@ footer {
 .footer-section a {
     color: #EF629D;
     text-decoration: none;
-    margin: 10px; /* Espacio entre secciones */
-
+    margin: 10px;
 }
 
 .footer-section a:hover {
-    color: #21a1f1; /* Color de hover */
+    color: #4a5053;
 }
 
+/* Input */
 .search-input {
     padding: 10px;
     width: 100%;
     max-width: 200px;
     border: none;
     border-radius: 5px;
+    color: #333333; /* Texto oscuro */
+    background-color: #f0f0f0; /* Fondo claro */
+    margin-right: 8px;
+}
+
+.search-input::placeholder {
+    color: #666666; /* Color placeholder oscuro */
+}
+
+button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #A259FF;
+    color: #282c34;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #8916ac;
+}
+
+.error-message {
+    color: #ff4d4f;
+    margin-top: 10px;
+    font-size: 14px;
 }
