--- a/src/components/Descripcion.css
+++ b/src/components/Descripcion.css
@@ -17,9 +17,16 @@ body {
 }
 
 .image-section {
-	width: 100%;
-	height: 60vh;
-	overflow: hidden;
+    background: linear-gradient(to left,#a259ff 50%, transparent); /* Gradiente de izquierda a derecha */
+    width: 100%;
+    height: 60vh;
+    margin-top: 25rem;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 0.50fr 1fr 1fr;
+    gap: 20px;
+    align-items: center;
+    font-family: Oxanium;
 }
 
 .header-image {
